# iGot-AQS-Analysis

./: .gitignore  AUTOMATION_SUMMARY.md  EXTRACTION_SCRIPT_README.md  QUICKSTART.sh  README.md  courses_with_assessnemt.txt  main.py  pyproject.toml  test_gemini_connection.py
cost_estimation/: Cost_Estimation_Data_For_Excel.csv  Cost_estimation_AQS.xlsx  cost_summary.csv  create_excel_csv.py  create_excel_guide.py  create_excel_report.py  excel_population_guide.txt  extract_cost_data.py  iGOT_Karmayogi_AI_Project_Cost_Template.xlsx
explainations/: design_document.md  high_level_understanding.md  low_level_understanding.md
prompts/: aqs_system_prompts.yaml  aqs_system_prompts_v1.yaml
scripts/: __init__.py  aqs_report.html  aqs_report_latest_v1.html  aqs_report_updated.html  aqs_report_updated_v1.html  aqs_report_updated_v2.html  aqs_report_v1.html  aqs_report_v2.html  generate_aqs_report.py  generate_aqs_report_v1.py  generate_aqs_report_v2.py  generate_aqs_report_v3.py  pdf_video_meta.html
scripts/assessment_quality_score/: __init__.py  aqs_evaluator.py  checkpoint_manager.py  config.py  data_loader.py  prompt_manager.py  utils.py
scripts/c_and_q_extractor/: extract_course_content.py  extraction_guide.sh  reorganize_by_modules.py
template/: aqs_report_template.html  aqs_report_template_v1.html  aqs_report_template_v2.html
